pkg/objects/Apontamento_de_Horas__c.object
<CustomObject>
    <fields>
        <fullName>Data_do_Apontamento__c</fullName>
        <description>Data que o apontamento foi realizado</description>
        <inlineHelpText>Quando este apontamento foi realizado?</inlineHelpText>
        <label>Data do Apontamento</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Chave externa da tabela e consiste das informações de time+engagement+data.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funcion_rio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Funcionário ao qual o apontamento de horas está relacionado</description>
        <inlineHelpText>Qual funcionario este apontamento está relacionado</inlineHelpText>
        <label>Funcionário</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Apontamento de Horas</relationshipLabel>
        <relationshipName>Apontamento_de_Horas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Horas_Apontadas__c</fullName>
        <description>Quantidade de horas apontadas.</description>
        <inlineHelpText>Quantas horas foram apontadas?</inlineHelpText>
        <label>Horas Apontadas</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horas_Excedidas__c</fullName>
        <formula>IF( Horas_Apontadas__c &gt; 8, Horas_Apontadas__c - 8, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas Excedidas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projeto__c</fullName>
        <description>Projeto ao qual as horas estão relacionadas</description>
        <inlineHelpText>Qual projeto este apontamento está relacionado?</inlineHelpText>
        <label>Projeto</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Apontamento de Horas</relationshipLabel>
        <relationshipName>Apontamento_de_Horas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>Funcion_rio__r.Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <label>Apontamento de Horas</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Funcion_rio__c</columns>
        <columns>Horas_Apontadas__c</columns>
        <columns>Horas_Excedidas__c</columns>
        <columns>Projeto__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AH-{00000}</displayFormat>
        <label>Apontamento de Horas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apontamento de Horas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>